fixed visibility issues with the dragons

--- a/style.css
+++ b/style.css
@@ -13,11 +13,8 @@ nav{
     display: flex;
     justify-content: center;
     text-align: center;
-    /* padding:-5em; */
-    padding-right: 0;
     width: 100%;
     font-size: 25px;
-    border-radius: 25px;
 }
 a{
     text-decoration: none;
@@ -39,9 +36,10 @@ nav a{
 }
 nav ul{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    border-radius: 25px;
     justify-content: center;
-    max-width: 80%;
+    max-width: 85%;
     min-width: 200px;
     font-size: 1.2em;
     list-style-type: none;
@@ -289,6 +287,9 @@ p{
         --bigglow: #486D2A;
         animation: pulseGlow 3s infinite;
     }
+    .content {
+        background-color: rgba(118, 164, 224, 0.7);
+    }
     .arrow {
         color: #154F5B;
     }
@@ -353,6 +354,9 @@ p{
         --regglow: #78df26;
         --bigglow: #88ef36;
         animation: pulseGlow 3s infinite;
+    }
+    .content {
+        background-color: rgba(20, 49, 87, 0.7);
     }
     .arrow {
         color: #74ccde;
